Fixing image and gallery align and spacing

--- a/.build/assets/styles/__blocks/__all.blocks.scss
+++ b/.build/assets/styles/__blocks/__all.blocks.scss
@@ -1,7 +1,30 @@
+figcaption {
+	width: 100%;
+	padding-right: var(--unit);
+	max-width: var(--constraint-narrow);
+	margin-left: auto;
+	margin-right: auto;
+	@include tablet {
+		padding-right: 0;
+	}
+}
+
+.alignfull,
+.alignwide,
+.alignxwide {
+	figcaption {
+		padding-left: var(--unit);
+		@include tablet {
+			padding-left: 0;
+		}
+	}
+}
+
 @import "code";
 @import "columns";
 @import "cover";
 @import "embed";
+@import "gallery";
 @import "image";
 @import "imagegallery";
 @import "latest-posts";
@@ -22,9 +45,14 @@
 @include context-edit {
 	.wp-block {
 		max-width: var(--constraint-narrow);
+		&.alignwide,
 		&[data-align="wide"] {
 			max-width: var(--constraint-wide);
 		}
+		&.alignxwide {
+			max-width: var(--constraint-xwide);
+		}
+		&.alignfull,
 		&[data-align="full"] {
 			max-width: var(--constraint-full);
 		}
